Added bus check method
