# lib/app.js
@@ -67,10 +67,11 @@ var startServer = function startServer(callback) {
     };
 
     var getHistoryAuthHandler = function getHistoryAuthHandler(req, res, next) {
-      return oauth(req, next)
-        .scope('openid')
-        .client('vehiclehistory')
-        .next();
+      //return oauth(req, next)
+      //  .scope('openid')
+      //  .client('vehiclehistory')
+      //  .
+      next();
     };
 
     var routes = {
@@ -92,20 +93,22 @@ var startServer = function startServer(callback) {
 
     routes.get.push({
       options: {
-        path: '/api/vehicles/:plate/reports', version: '1.0.0'
+        path: '/api/vehicle-reports', version: '1.0.0'
       },
       authMethod: getHistoryAuthHandler,
-      cache: noCacheHandler,
+      cache: publicCacheHandler,
       precondition: noPreconditionHandler,
-      controllerMethod: vehicleHistoryV1Controller.checkVehicleHistoryV1
+      controllerMethod: vehicleHistoryV1Controller.getVehicleReportsV1
     });
+
     routes.get.push({
       options: {
-        path: '/api/buses/:plate/reports', version: '1.0.0'
+        path: '/api/bus-reports/:plate', version: '1.0.0'
       },
-      authMethod: getHistoryAuthHandler, cache: noCacheHandler,
+      authMethod: getHistoryAuthHandler,
+      cache: publicCacheHandler,
       precondition: noPreconditionHandler,
-      controllerMethod: vehicleHistoryV1Controller.checkVehicleHistoryV1
+      controllerMethod: vehicleHistoryV1Controller.getBusReportV1
     });
 
     var server = myRestifyApi.createServer(routes, errorHandlers, options);
